Library Scrollbar problem solve

--- a/src/asset/global.scss
+++ b/src/asset/global.scss
@@ -7,6 +7,7 @@
 }
 body{
   color:#1f2933;
+  overflow: hidden;
 }
 ::-webkit-scrollbar {
   width: 8px;
